# drf-pytest-ci

./: .gitignore  pyproject.toml
.github/workflows/: pytest.yml
api/migrations/: 0001_initial.py
api/tests/: test_api.py
sample_project/: settings.py  urls.py
